--- a/src/TwitchMemeAlertsAuto.WPF/Properties/Resources.ru-RU.resx
+++ b/src/TwitchMemeAlertsAuto.WPF/Properties/Resources.ru-RU.resx
@@ -120,10 +120,10 @@
   <data name="MainWindowTitle" xml:space="preserve">
     <value>tmaa</value>
   </data>
-  <data name="ConnectTwitch" xml:space="preserve">
+  <data name="ConnectTwitchTooltip" xml:space="preserve">
     <value>Подключить Twitch</value>
   </data>
-  <data name="ConnectMemeAlerts" xml:space="preserve">
+  <data name="ConnectMemeAlertsTooltip" xml:space="preserve">
     <value>Подключить MemeAlerts</value>
   </data>
   <data name="RewardsHeader" xml:space="preserve">
@@ -187,7 +187,7 @@
     <value>Саппортеры</value>
   </data>
   <data name="Balance" xml:space="preserve">
-    <value>Баланс</value>
+    <value>Баланс:</value>
   </data>
   <data name="Unknown" xml:space="preserve">
     <value>Неизвестно</value>
@@ -206,5 +206,17 @@
   </data>
   <data name="Memes" xml:space="preserve">
     <value>мемов</value>
+  </data>
+  <data name="SearchForRewardsTooltip" xml:space="preserve">
+    <value>Полнотекстовый поиск по наградам</value>
+  </data>
+  <data name="RefreshTooltip" xml:space="preserve">
+    <value>Обновить</value>
+  </data>
+  <data name="SearchForSupportersTooltip" xml:space="preserve">
+    <value>Полнотекстовый поиск по саппортерам</value>
+  </data>
+  <data name="SearchForLogsTooltip" xml:space="preserve">
+    <value>Полнотекстовый поиск по логам</value>
   </data>
 </root>
