feat: add startup ability

--- a/src/TwitchMemeAlertsAuto.WPF/Properties/Resources.resx
+++ b/src/TwitchMemeAlertsAuto.WPF/Properties/Resources.resx
@@ -219,4 +219,7 @@
   <data name="RefreshTooltip" xml:space="preserve">
     <value>Refresh</value>
   </data>
+  <data name="AddWinStartup" xml:space="preserve">
+    <value>Start on login</value>
+  </data>
 </root>
